<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/o">

    <Button
        android:id="@+id/button_heading8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/heading"
        android:foreground="@color/heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_footer8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/heading"
        android:foreground="@color/heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:id="@+id/congrat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/cong"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_heading8"
        />
    <TextView
        android:padding="15dp"
        android:id="@+id/end_story"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/end"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congrat"
        />
    <Button
        android:id="@+id/endend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/next"
        android:text="@string/endend"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="25sp"
        app:backgroundTint="@color/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_story"/>
</androidx.constraintlayout.widget.ConstraintLayout>