<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/button_heading1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/heading"
            android:layout_width="match_parent"
            android:foreground="@color/heading"
            android:layout_height="40dp"/>



        <ImageView
            android:layout_marginTop="30dp"
            android:id="@+id/titles0"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/castle0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:background="@drawable/castle1"
        android:id="@+id/castle0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/castle0"
        android:layout_margin="10dp"
        app:backgroundTint="@color/heading"
        android:background="@color/heading"/>

    <Button
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        android:layout_margin="10dp"
        app:backgroundTint="@color/heading"
        android:background="@color/heading"/>

    <Button
        android:id="@+id/more_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules"
        android:layout_margin="10dp"
        app:backgroundTint="@color/heading"
        android:background="@color/heading"/>

        <Button
            android:id="@+id/button_foot1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/heading"
            android:layout_width="match_parent"
            android:foreground="@color/heading"
            android:layout_height="40dp"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>